--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 /* index.css */
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #8b8b8b;
+  background-color: #2c2c2c;
+  color: white
 }
 
 #root {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column; 
+  justify-content: flex-start;
+  align-items: center;    
   min-height: 100vh;
   padding: 2rem;
 }
